[feat] Add basic favicon support [ui] Add border radius [seo] Add show subtitle as it's description in meta tag [seo] Add - 'website name' to show recordings pages [fix] Width constrains for live player [fix] Too large streamm selector [fix] Recorder controls not respecting rounded corners [fix] horizontal scroll on recordings [fix] main -> div class="page" on recordings [fix] Fix recordings medatada errors [fix] security: Check is send disabled before accepting it [fix] security: Check has show been disabled before alowing to load the recordings page [fix] security: Check have show recordings been disabled before alowing to load the recordings page [fix] security: Denay directory listing for assets/** [docs] Add favicon generation instructions to readme

--- a/public_html/assets/style.css
+++ b/public_html/assets/style.css
@@ -21,7 +21,7 @@
 
   --color-background-live: var(--color-info);
 
-  --border-radius: 0rem;
+  --border-radius: 0.8rem;
   --border-size: 1px;
 
   --transition-height: 15rem;
@@ -46,7 +46,7 @@ body {
 body:has(dialog[open]) {
     overflow: hidden;
 }
-main {
+.page {
   width: 100%;
   height: 100%;
   max-width: var(--page-max-width);
@@ -198,6 +198,7 @@ data.endpoints {
 .player-controls {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-top: 1.5rem;
 }
 .play-stop > button {
@@ -300,10 +301,13 @@ data.endpoints {
 header {
   background-color: var(--color-background-alternative);
   border-bottom: var(--border-size) solid var(--color-background-field);
-  padding: 0.5rem;
+  padding: 0.5rem 0;
   width: 100%;
   display: flex;
   justify-content: center;
+}
+header p, header h4 {
+  margin: 0 1rem;
 }
 
 .icon {
@@ -532,6 +536,8 @@ button[type="submit"]:hover > svg {
   display: flex;
   justify-content: space-between;
   background-color: var(--color-background-alternative);
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
 .recorder .controls > .icon-main > svg {
   display: none;
@@ -634,4 +640,5 @@ section:first-of-type {
   background-color: var(--color-background-live);
   --color-transition-from: var(--color-background-live);
   --color-transition-to: var(--color-background);
+  width: 100%;
 }
